[tool.poetry]
name = "python-eufy-security-mqtt"
version = "0.1.0"
description = "Subscribe to eufy Security Doorbell events"
authors = ["Alexander Bessonov <nonsleepr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
hbmqtt = "^0.9.6"
protobuf = "^3.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
