[tool.poetry]
name = "python-eufy-security-mqtt"
version = "0.1.0"
description = "Subscribe to eufy Security Doorbell events"
license = "MIT"
authors = ["Alexander Bessonov <nonsleepr@gmail.com>"]
packages = [
  { include = "eufy_security/mqtt", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
hbmqtt = "^0.9.6"
protobuf = "^3.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
